Routes to start / stop sirene
